Update about us and home page

--- a/about-us.html
+++ b/about-us.html
@@ -36,12 +36,13 @@
         <div class="services">
             <h2 class="list-title header">Our Services</h2>
             <ul class="list">
+                <li>Afterschool</li>
                 <li>Pick up from school</li>
                 <li>Open until 6:30 PM</li>
                 <li>Classes divided by grade (K-8)</li>
                 <li>Homework helpers</li>
                 <li>Large grass field and playground for outdoor fun and sports</li>
-                <li>Summer schooling</li>
+                <li>Open on non-major holidays & student free days</li>
             </ul>
         </div>
         <div class="banner container">
@@ -55,9 +56,14 @@
         <img class="banner-image" src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
         <div class="services">
             <h2 class="list-title">TUY Summer School Program</h2>
+            <ul class="list">
+                <li>8:00am - 6:30pm</li>
+                <li>Academic classes (Reading, Writing, Math)</li>
+                <li>Sports & Activities</li>
+                <li>Lunch Provided</li>
+            </ul>
             <h3 class="list-subtitle">Field Trips</h3>
             <ul class="list">
-                <li>Seaside Lagoon</li>
                 <li>Ice Skating</li>
                 <li>Raging Waters</li>
             </ul>
@@ -77,7 +83,7 @@
         <div class="services">
             <h2 class="list-title">About the Director</h2>
             <ul class="list">
-                <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
+                <li>Current teacher at Victor Elementary School in Torrance</li>
                 <li>B.A. in Elementary Education from University of Southern California</li>
                 <li>M.A. from Arkansas State University</li>
                 <li>Credentials from California State University Northridge</li>
