--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <div class="footer">
         <div class="footer-container">
             <div id="phone-container">
-                <h3 class="phone-number">Call or Text</h3>
+                <h3 class="phone-number" id="phone-label">Call or Text</h3>
                 <h3 class="phone-number">310-465-9225</h3>
             </div>
 
             <div id="email-container">
-                <h3 class="email-address">Email</h3>
-                <h3 class="email-address">eyc2869@gmail.com</h3>
+                <h3 class="email-address" id="email-label"><a href="mailto:eyc2869@gmail.com">Email</a></h3>
+                <h3>eyc2869@gmail.com</h3>
             </div>
         </div>
 
