Fix footer sizing and content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="banner-section">
         <div class="banner container">
             <div class="title container">
-                <h1 class="title">TUY Academy</h1>
+                <h1 class="title" id="header">TUY Academy</h1>
                 <div class="summary container">
                     <p class="summary paragraph">
                         TUY was established in 1994, offering services from school pickups to after-school tutoring to
@@ -76,16 +76,14 @@
     <!-- TODO: Make fonts bigger. Can already tell it's too small on mobile devices -->
     <!-- TODO: Make navi bar logo bigger. Can already tell it's too small on mobile devices -->
     <div class="footer">
-        <div class="footer-container">
-            <div id="phone-container">
-                <h3 class="phone-number" id="phone-label">Call or Text</h3>
-                <h3 class="phone-number">310-465-9225</h3>
-            </div>
+        <div id="phone-container">
+            <h3 id="phone-label">Call or Text</h3>
+            <h3 id="phone-number">310-465-9225</h3>
+        </div>
 
-            <div id="email-container">
-                <h3 class="email-address" id="email-label"><a href="mailto:eyc2869@gmail.com">Email</a></h3>
-                <h3>eyc2869@gmail.com</h3>
-            </div>
+        <div id="email-container">
+            <h3 id="email-label">Email</h3>
+            <a href="mailto:tuyacademy1@gmail.com" id="email-address">tuyacademy1@gmail.com</a>
         </div>
 
     </div>
