--- a/about-us.html
+++ b/about-us.html
@@ -7,92 +7,17 @@
     <title>TUY Academy</title>
     <link rel="stylesheet" type="text/css" href="css/tuy_global.css">
     <link rel="stylesheet" type="text/css" href="css/tuy_about-us.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <!-- navigation bar -->
-    <nav class="navbar">
-        <div>
-            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
-        </div>
-        <ul class="nav-list">
-            <li class="list-item">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="list-item">
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li class="list-item">
-                <a href="schedule.html">Schedule</a>
-            </li>
-            <li class="list-item">
-                <a href="gallery.html">Gallery</a>
-            </li>
-        </ul>
-    </nav>
-
-    <!-- page banner -->
-    <div class="header-container">
-        <div class="services">
-            <h2 class="list-title header">Our Services</h2>
-            <ul class="list">
-                <li>Afterschool</li>
-                <li>Pick up from school</li>
-                <li>Open until 6:30 PM</li>
-                <li>Classes divided by grade (K-8)</li>
-                <li>Homework helpers</li>
-                <li>Large grass field and playground for outdoor fun and sports</li>
-                <li>Open on non-major holidays & student free days</li>
-            </ul>
-        </div>
-        <div class="banner container">
-            <img class="banner-image" src="./img/tuy-classtime-candid-4.png"
-                alt="Photo of teacher and kids in classroom. Credit to TUY Academy" class="banner">
-        </div>
-    </div>
-
-    <div class="summer-container">
-
-        <img class="banner-image" src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
-        <div class="services">
-            <h2 class="list-title">TUY Summer School Program</h2>
-            <ul class="list">
-                <li>8:00am - 6:30pm</li>
-                <li>Academic classes (Reading, Writing, Math)</li>
-                <li>Sports & Activities</li>
-                <li>Lunch Provided</li>
-            </ul>
-            <h3 class="list-subtitle">Field Trips</h3>
-            <ul class="list">
-                <li>Ice Skating</li>
-                <li>Raging Waters</li>
-            </ul>
-            <h3 class="list-subtitle">Activities</h3>
-            <ul class="list">
-                <li>Sports</li>
-                <li>Carnivals</li>
-                <li>Treasure Hunts</li>
-                <li>Arts and Crafts</li>
-                <li>Cooking and Baking</li>
-                <li>Water Day</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="contact-info-container">
-        <div class="services">
-            <h2 class="list-title">About the Director</h2>
-            <ul class="list">
-                <li>Current teacher at Victor Elementary School in Torrance</li>
-                <li>B.A. in Elementary Education from University of Southern California</li>
-                <li>M.A. from Arkansas State University</li>
-                <li>Credentials from California State University Northridge</li>
-            </ul>
-        </div>
-        <img class="banner-image" src="./img/contact-image.png"
-            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School"/>
-    </div>
-
+    
 </body>
 
 </html>
