--- a/gallery.html
+++ b/gallery.html
@@ -7,49 +7,17 @@
     <title>TUY Academy</title>
     <link rel="stylesheet" type="text/css" href="css/tuy_global.css">
     <link rel="stylesheet" type="text/css" href="css/tuy_gallery.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <!-- navigation bar -->
-    <nav class="navbar">
-        <div>
-            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
-        </div>
-        <ul class="nav-list">
-            <li class="list-item">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="list-item">
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li class="list-item">
-                <a href="schedule.html">Schedule</a>
-            </li>
-            <li class="list-item">
-                <a href="gallery.html">Gallery</a>
-            </li>
-        </ul>
-    </nav>
-
-    <div class="gallery-container">
-        <div class="image-gallery jumpers">
-            <!-- Imgs of rented jumpers activities -->
-            <img src="./img/tuy-activities-jumper-candid.png">
-            <img src="./img/tuy-activities-jumper.png">
-        </div>
-
-        <div class="image-gallery jumper-gym">
-            <!-- Img of jumper gym -->
-            <img src="./img/tuy-activities-jumper_gym.png">
-        </div>
-
-        <div class="image-gallery carnival">
-            <!-- Imgs of carnival day -->
-            <img src="./img/tuy-activities-carnival-candid.png">
-            <img src="./img/tuy-activities-carnival.png">
-        </div>
-
-    </div>
+    
 </body>
 
 </html>
