--- a/schedule.html
+++ b/schedule.html
@@ -7,81 +7,17 @@
     <title>TUY Academy</title>
     <link rel="stylesheet" type="text/css" href="css/tuy_global.css">
     <link rel="stylesheet" type="text/css" href="css/tuy_schedule.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <!-- navigation bar -->
-    <nav class="navbar">
-        <div>
-            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
-        </div>
-        <ul class="nav-list">
-            <li class="list-item">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="list-item">
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li class="list-item">
-                <a href="schedule.html">Schedule</a>
-            </li>
-            <li class="list-item">
-                <a href="gallery.html">Gallery</a>
-            </li>
-        </ul>
-    </nav>
-
-
-    <div id="after-school-container">
-        <!-- page banner for after school -->
-
-        <h1 class="container-title">After School Daily Schedule</h1>
-        <div class="schedule">
-            <h2 class="schedule-title">Kindergarten</h2>
-            <ul>
-                <li>1:50pm - 2:00pm Pick Up</li>
-                <li>2:15pm - 3:00pm Free Time</li>
-                <li>3:30pm - 4:45pm Homework & TUY Packets (Reading, Math, Writing)</li>
-                <li>4:45pm - 5:15pm Break Time - Playground</li>
-                <li>5:15pm - 6:00pm Journal, Activities, Stories</li>
-                <li>6:00pm - 6:30pm Free Time</li>
-            </ul>
-            <h2 class="schedule-title">1st - 8th Graders</h2>
-            <ul>
-                <li>3:00pm - 3:30pm Pick Up</li>
-                <li>3:40pm - 5:00pm Homework, TUY Packet, Journal</li>
-                <li>5:00pm - 5:15pm Break Time</li>
-                <li>5:15pm - 6:00pm Reading, Writing, Math</li>
-                <li>6:00pm - 6:30pm Free Time</li>
-            </ul>
-        </div>
-        <img class="schedule-image" src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy">
-    </div>
-
-
-    <div id="summer-school-container">
-        <!-- page banner for summer school -->
-        <img class="schedule-image" src="./img/tuy-activities-tug_of_war.png"
-            alt="Photo of group of kids playing tug of war. Credit to TUY Academy">
-
-        <div class="schedule">
-            <h2 class="schedule-title">Kdg-8 Schedule</h2>
-            <ul>
-                <li>8:00am Open</li>
-                <li>9:30am - 12:15pm Classes (Reading, Writing, Math)</li>
-                <li>12:15pm - 1:00pm Lunch (Provided)</li>
-                <li>1:00pm - 2:00pm Journal & Reading</li>
-                <li>2:00pm - 4:00pm Activities, Playground</li>
-                <li>4:00pm - 5:00pm Reading</li>
-                <li>5:00pm - 6:00pm Closing</li>
-            </ul>
-
-        </div>
-
-        <!-- TODO: Update schedules using large time table rather than bulleted list -->
-
-        <h1 class="container-title">Summer School Daily Schedule</h1>
-    </div>
+   
 </body>
 
 </html>
