--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
+<body style="background-color: #fffaf0;">
 
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d9480f;">
@@ -46,7 +46,33 @@
         </ul>
       </div>
     </div>
-  </nav>
+    </nav>
+
+    <!-- welcome section -->
+    <section class="welcome-section py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6 mb-4 mb-md-0">
+              <img src="img/tuy-freetime-benchphoto.png" alt="Students at TUY Academy" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+              <h1 class="display-4">TUY Academy</h1>
+              <p class="lead">
+                TUY was established in 1994, offering services from school pickups to after-school tutoring to help students with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and caring tutors are dedicated to give students the time and attention needed to nurture their unique style and accomplish their learning goals.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      
+      <section class="contact-section py-5">
+        <div class="container text-center">
+          <h2>Contact</h2>
+          <p>Call or text at <a href="tel:3104659225">310-465-9225</a></p>
+          <p>Or email at <a href="mailto:tuyacademy1@gmail.com">tuyacademy1@gmail.com</a></p>
+        </div>
+      </section>
+
 </body>
     
 
