Reformat contact info

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body style="background-color: #fffaf0;">
+<body style="background-color: #fffaf0; padding-top: 80px;">
 
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d9480f;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #d9480f;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="./media/images/TUY_logo.jpg" alt="TUY Academy Logo" width="60" height="60" class="d-inline-block align-text-top">
@@ -65,11 +65,25 @@
         </div>
       </section>
       
-      <section class="contact-section py-5">
-        <div class="container text-center">
-          <h2>Contact</h2>
-          <p>Call or text at <a href="tel:3104659225">310-465-9225</a></p>
-          <p>Or email at <a href="mailto:tuyacademy1@gmail.com">tuyacademy1@gmail.com</a></p>
+      <!-- contact and social info -->
+      <section class="contact-social-section py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <h2>Contact</h2>
+              <p>Call or text at <a href="tel:3104659225">310-465-9225</a></p>
+              <p>Or email at <a href="mailto:tuyacademy1@gmail.com">tuyacademy1@gmail.com</a></p>
+            </div>
+            <div class="col-md-6 text-center">
+              <h2>Follow Us</h2>
+              <p>Instagram: <a href="https://www.instagram.com/tuy_academy/" target="_blank">
+                  <img src="img/social-media-logos/instagram-logo.png" alt="Instagram Logo" width="30" height="30">
+              </a></p>
+              <p>Facebook: <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/" target="_blank">
+                  <img src="img/social-media-logos/facebook-logo.png" alt="Facebook Logo" width="30" height="30">
+              </a></p>
+            </div>
+          </div>
         </div>
       </section>
 
