--- a/about-us.html
+++ b/about-us.html
@@ -16,8 +16,77 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-    
+<body style="background-color: #fffaf0; padding-top: 80px;">
+
+    <!-- navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #d9480f;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="./media/images/TUY_logo.jpg" alt="TUY Academy Logo" width="60" height="60" class="d-inline-block align-text-top">
+          </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item ms-auto">
+            <a class="nav-link active" aria-current="page" href="about-us.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="schedule.html">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+
+    <section class="services-section py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <img src="img/tuy-classtime-candid.png" alt="TUY Services" class="img-fluid rounded">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="text-center mb-4">About Us</h2>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Afterschool</li>
+                        <li class="list-group-item">Pick up from school</li>
+                        <li class="list-group-item">Open until 6:30 PM</li>
+                        <li class="list-group-item">Classes divided by grade (K-8)</li>
+                        <li class="list-group-item">Homework helpers</li>
+                        <li class="list-group-item">Large grass field and playground for outdoor fun and sports</li>
+                        <li class="list-group-item">Open on non-major holidays & student free days</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="director-section py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                  <h2 class="text-center mb-4">About the Director</h2>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Current teacher at Victor Elementary School in Torrance</li>
+                    <li class="list-group-item">B.A. in Elementary Education from University of Southern California</li>
+                    <li class="list-group-item">M.A. from Arkansas State University</li>
+                    <li class="list-group-item">Credentials from California State University Northridge</li>
+                  </ul>
+                </div>
+                <div class="col-md-6 d-flex align-items-end">
+                  <img src="img/contact-image.png" alt="Director of TUY Academy" class="img-fluid rounded" style="max-height: 240px; object-fit: contain;">
+                </div>
+              </div>
+      </section>
+
 </body>
 
 </html>
