--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="about-us.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Schedule</a>
+            <a class="nav-link" href="schedule.html">Schedule</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
         </ul>
       </div>
