--- a/schedule.html
+++ b/schedule.html
@@ -16,8 +16,38 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-   
+<body style="background-color: #fffaf0; padding-top: 80px;">
+   <!-- navigation bar -->
+   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #d9480f;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="./media/images/TUY_logo.jpg" alt="TUY Academy Logo" width="60" height="60" class="d-inline-block align-text-top">
+          </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item ms-auto">
+            <a class="nav-link" href="about-us.html">About Us</a>
+          </li>
+          <li class="nav-item ms-auto">
+            <a class="nav-link active" aria-current="page" href="schedule.html">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+
+
+    
 </body>
 
 </html>
