Create gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,57 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-    
+<body style="background-color: #fffaf0; padding-top: 80px;">
+    <!-- navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #d9480f;">
+     <div class="container-fluid">
+         <a class="navbar-brand" href="#">
+             <img src="./media/images/TUY_logo.jpg" alt="TUY Academy Logo" width="60" height="60" class="d-inline-block align-text-top">
+           </a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNav">
+         <ul class="navbar-nav ms-auto">
+           <li class="nav-item">
+             <a class="nav-link" href="index.html">Home</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="about-us.html">About Us</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="schedule.html">Programs</a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
+           </li>
+         </ul>
+       </div>
+     </div>
+</nav>
+    <section class="gallery-section py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Gallery</h2>
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <img src="img/tuy-activities-artsandcrafts.png" class="img-fluid rounded" alt="Classroom">
+          </div>
+          <div class="col-md-4 mb-4">
+            <img src="img/tuy-activities-carnival-candid.png" class="img-fluid rounded" alt="Free Time">
+          </div>
+          <div class="col-md-4 mb-4">
+            <img src="img/tuy-activities-playground-jungle_gym.png" class="img-fluid rounded" alt="Playground">
+          </div>
+        </div>
+      </div>
+    </section>
+<section class="more-photos-section py-4 text-center">
+    <div class="container">
+      <h4>For more photos:</h4>
+      <p> <img src="img/social-media-logos/facebook-logo.png" alt="Facebook Logo" style="width: 24px; height: 24px;"> <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/" target="_blank">TUY Academy</a></p>
+    </div>
+</section>
 </body>
 
 </html>
