--- a/about-us.html
+++ b/about-us.html
@@ -33,11 +33,11 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item ms-auto">
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="about-us.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="schedule.html">Schedule</a>
+            <a class="nav-link" href="schedule.html">Programs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
