--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" type="text/css" href="css/tuy_schedule.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      .schedule-section .list-group-item {
+        font-size: 1.15rem;
+      }
+      .schedule-section h2, .schedule-section h3 {
+        font-size: 1.5rem;
+      }
+    </style>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -28,15 +36,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item ms-auto">
+          <li class="nav-item">
             <a class="nav-link" href="about-us.html">About Us</a>
           </li>
-          <li class="nav-item ms-auto">
-            <a class="nav-link active" aria-current="page" href="schedule.html">Schedule</a>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="schedule.html">Programs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
@@ -46,8 +54,61 @@
     </div>
     </nav>
 
+    <section class="schedule-section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <h2 class="text-center mb-4">TUY Afterschool Program</h2>
+            <h3>TK - 8th Grade</h3>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">1:50pm - 3:30pm Pick up from school</li>
+              <li class="list-group-item">3:30pm - 4:45pm Homework and TUY Packet</li>
+              <li class="list-group-item">4:45pm - 5:10pm Playground</li>
+              <li class="list-group-item">5:10pm - 6:30pm Reading and Go Home</li>
+            </ul>
+          </div>
+          <div class="col-md-6 text-center">
+            <img src="img/tuy_classtime_candid-2.jpg" alt="TUY Afterschool Program" class="img-fluid rounded" style="max-height: 300px; object-fit: contain;">
+          </div>
+        </div>
+      </div>
+    </section>
 
-    
+    <section class="schedule-section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <h2 class="text-center mb-4">TUY Summer School Program</h2>
+            <ul class="list-group list-group-flush mb-4">
+              <li class="list-group-item">8:00am - 6:30pm</li>
+              <li class="list-group-item">Academic classes (Reading, Writing, Math)</li>
+              <li class="list-group-item">Sports & Activities</li>
+              <li class="list-group-item">Lunch Provided</li>
+            </ul>
+
+            <h3>Field Trips</h3>
+            <ul class="list-group list-group-flush mb-4">
+              <li class="list-group-item">Ice Skating</li>
+              <li class="list-group-item">Raging Waters</li>
+            </ul>
+
+            <h3>Activities</h3>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Sports</li>
+              <li class="list-group-item">Carnivals</li>
+              <li class="list-group-item">Treasure Hunts</li>
+              <li class="list-group-item">Arts and Crafts</li>
+              <li class="list-group-item">Cooking and Baking</li>
+              <li class="list-group-item">Water Day</li>
+            </ul>
+          </div>
+          <div class="col-md-6 text-center">
+            <img src="img/tuy-activities-tug_of_war.png" alt="TUY Summer School Program" class="img-fluid rounded" style="max-height: 300px; object-fit: contain;">
+          </div>
+        </div>
+      </div>
+    </section>
+
 </body>
 
 </html>
