Fix nav bar bugs

--- a/schedule.html
+++ b/schedule.html
@@ -36,9 +36,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link ms-auto" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about-us.html">About Us</a>
