Edit minor details

--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
                 <div class="col-md-6">
                     <h2 class="text-center mb-4">About Us</h2>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Afterschool</li>
+                        <li class="list-group-item">Afterschool Daycare/Tutoring Services</li>
                         <li class="list-group-item">Pick up from school</li>
                         <li class="list-group-item">Open until 6:30 PM</li>
                         <li class="list-group-item">Classes divided by grade (K-8)</li>
