--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body style="background-color: #fffaf0; padding-top: 80px;">
 
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #d9480f;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #964222;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="./media/images/TUY_logo.jpg" alt="TUY Academy Logo" width="60" height="60" class="d-inline-block align-text-top">
@@ -53,7 +53,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 mb-4 mb-md-0">
-              <img src="img/tuy-freetime-benchphoto.png" alt="Students at TUY Academy" class="img-fluid rounded">
+              <img src="img/tuy_banner.jpg" alt="Students at TUY Academy" class="img-fluid rounded" style="max-width: 350;">
             </div>
             <div class="col-md-6">
               <h1 class="display-4">TUY Academy</h1>
@@ -69,7 +69,7 @@
       <section class="contact-social-section py-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center" style="font-size: larger;">
               <h2>Contact</h2>
               <p>Call or text at <a href="tel:3104659225">310-465-9225</a></p>
               <p>Or email at <a href="mailto:tuyacademy1@gmail.com">tuyacademy1@gmail.com</a></p>
