--- a/schedule.html
+++ b/schedule.html
@@ -59,7 +59,7 @@
         <div class="row align-items-center">
           <div class="col-md-6">
             <h2 class="text-center mb-4">TUY Afterschool Program</h2>
-            <h3>TK - 8th Grade</h3>
+            <h4>TK - 8th Grade</h3>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">1:50pm - 3:30pm Pick up from school</li>
               <li class="list-group-item">3:30pm - 4:45pm Homework and TUY Packet</li>
@@ -78,7 +78,8 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <h2 class="text-center mb-4">TUY Summer School Program</h2>
+            <h2 class="text-center mb-4">TUY Summer Program</h2>
+            <h4>TK - 8th Grade</h3>
             <ul class="list-group list-group-flush mb-4">
               <li class="list-group-item">8:00am - 6:30pm</li>
               <li class="list-group-item">Academic classes (Reading, Writing, Math)</li>
