Change welcome page text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <div class="col-md-6">
               <h1 class="display-4">TUY Academy</h1>
               <p class="lead">
-                TUY was established in 1994, offering services from school pickups to after-school tutoring to help students with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and caring tutors are dedicated to give students the time and attention needed to nurture their unique style and accomplish their learning goals.
+                Established in 1994, T.U.Y. Academy provides comprehensive support for students through a variety of services, including pick-up from school and afterschool tutoring. We help students with completing their homework as well as reading, writing, and math enrichment in a small group environment. <br>
+
+                Our team of qualified and compassionate tutors is committed to giving each student the support and encouragement they need to thrive. We focus on nurturing every learner's unique style and helping them achieve their academic goals with confidence. Lastly, we make sure all the students have fun!
               </p>
             </div>
           </div>
